# nbn-status

./: .env.example  .funcignore  .gitignore  AGENTS.md  README.md  deploy.sh  function_app.py  nbn_monitor.py  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: deploy.yml  validate.yml
tests/: test_monitor.py
