[project]
name = "nbn-status"
version = "0.1.0"
description = "NBN outage monitor with ntfy notifications and traffic-light status page"
requires-python = ">=3.13"
dependencies = [
    "azure-functions>=1.24.0",
    "azure-storage-blob>=12.24.0",
    "niquests>=3.18.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=nbn_monitor --cov-report=term-missing --cov-fail-under=85"
